#287 Fix user settings sidebar scrollbar

--- a/src/modules/ui/_scrollbar.scss
+++ b/src/modules/ui/_scrollbar.scss
@@ -1,5 +1,5 @@
 // Channels, members, settings nav
-.theme-dark .thin_b1c063{
+.theme-dark .thin__62e51{
     &::-webkit-scrollbar{
         width: 6px;
     }
